--- a/dc-woocommerce-multi-vendor/assets/admin/css/admin.css
+++ b/dc-woocommerce-multi-vendor/assets/admin/css/admin.css
@@ -3271,6 +3271,10 @@ div.health-check-accordion .health-check-accordion-panel table td {
   background-color: #fdfdfe;
   color: #181718;
 }
+.mvx-backend-datatable-wrapper .rdt_Table .rdt_TableHead .rdt_TableHeadRow .rdt_TableCol:nth-child(9) {
+  overflow: visible;
+  min-width: 200px;
+}
 .mvx-backend-datatable-wrapper .rdt_Table .rdt_TableHead .rdt_TableHeadRow .sc-crXcEl {
   justify-content: start;
 }
@@ -3283,6 +3287,10 @@ div.health-check-accordion .health-check-accordion-panel table td {
   background-color: #fdfdfe;
   font-size: 0.813rem;
   position: relative;
+}
+.mvx-backend-datatable-wrapper .rdt_Table .rdt_TableBody .rdt_TableRow .rdt_TableCell:nth-child(9) {
+  overflow: visible;
+  min-width: 200px;
 }
 .mvx-backend-datatable-wrapper .rdt_Table .rdt_TableBody .rdt_TableRow .rdt_TableCell img {
   margin: 0 0.5rem 0 0;
